--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "html",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-  },
+  "dependencies": {},
   "scripts": {
     "start": "npx http-server ./ --port 3000"
   },
